--- a/public/en/about/index.html
+++ b/public/en/about/index.html
@@ -32,7 +32,8 @@
   <meta property="og:site_name" content="Blog của Trần Phát Đạt">
   <meta property="og:title" content="Thông tin của tôi">
   <meta property="og:description" content="Xin chào ! Tôi là Trần Phát Đạt, là sinh viên năm 4 của trường đại học Công Nghệ TP.HCM và có niềm đam mê với công nghệ và yêu thích việc tìm hiểu những xu hướng mới trong lập trình.
-Tôi có kinh nghiệm làm việc với nhiều ngôn ngữ lập trình như Java, JavaScript, và C#. Bên cạnh đó, tôi luôn nỗ lực để phát triển bản thân và chia sẻ kiến thức thông qua các bài viết trên blog này.">
+Ngày sinh: 30/10/2003 SĐT: 0867431942 Email: Dattp3010@gmail.com Tôi có kinh nghiệm làm việc với nhiều ngôn ngữ lập trình như:
+Java, JavaScript, C#, C&#43;&#43;, SQL, HTML, CSS, PHP Bên cạnh đó, tôi luôn nỗ lực để phát triển bản thân và chia sẻ kiến thức thông qua các bài viết trên blog này. DỰ ÁN THỰC HIỆN Web Thương mại điện tử https://github.com/Dievis/JavaSpringBoots Công nghệ sử dụng: Java Spring boot, MySQL Mô tả:">
   <meta property="og:locale" content="en_vi">
   <meta property="og:type" content="article">
     <meta property="article:section" content="en">
@@ -43,7 +44,8 @@ Tôi có kinh nghiệm làm việc với nhiều ngôn ngữ lập trình như J
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Thông tin của tôi">
   <meta name="twitter:description" content="Xin chào ! Tôi là Trần Phát Đạt, là sinh viên năm 4 của trường đại học Công Nghệ TP.HCM và có niềm đam mê với công nghệ và yêu thích việc tìm hiểu những xu hướng mới trong lập trình.
-Tôi có kinh nghiệm làm việc với nhiều ngôn ngữ lập trình như Java, JavaScript, và C#. Bên cạnh đó, tôi luôn nỗ lực để phát triển bản thân và chia sẻ kiến thức thông qua các bài viết trên blog này.">
+Ngày sinh: 30/10/2003 SĐT: 0867431942 Email: Dattp3010@gmail.com Tôi có kinh nghiệm làm việc với nhiều ngôn ngữ lập trình như:
+Java, JavaScript, C#, C&#43;&#43;, SQL, HTML, CSS, PHP Bên cạnh đó, tôi luôn nỗ lực để phát triển bản thân và chia sẻ kiến thức thông qua các bài viết trên blog này. DỰ ÁN THỰC HIỆN Web Thương mại điện tử https://github.com/Dievis/JavaSpringBoots Công nghệ sử dụng: Java Spring boot, MySQL Mô tả:">
 
 
     
@@ -145,8 +147,44 @@ stroke-linejoin="round" class="feather feather-home">
                 <p><img src="/images/myavt.jpg" alt="avt"></p>
 <h1 id="xin-chào-"><strong>Xin chào !</strong></h1>
 <p>Tôi là <strong>Trần Phát Đạt</strong>, là sinh viên năm 4 của trường đại học Công Nghệ TP.HCM và có niềm đam mê với công nghệ và yêu thích việc tìm hiểu những xu hướng mới trong lập trình.</p>
-<p>Tôi có kinh nghiệm làm việc với nhiều ngôn ngữ lập trình như <strong>Java</strong>, <strong>JavaScript</strong>, và <strong>C#</strong>. Bên cạnh đó, tôi luôn nỗ lực để phát triển bản thân và chia sẻ kiến thức thông qua các bài viết trên blog này.</p>
-<p>Hãy cùng tôi khám phá thế giới lập trình đầy thú vị nhé!</p>
+<ul>
+<li>Ngày sinh: 30/10/2003</li>
+<li>SĐT: 0867431942</li>
+<li>Email: <a href="mailto:Dattp3010@gmail.com">Dattp3010@gmail.com</a></li>
+</ul>
+<p>Tôi có kinh nghiệm làm việc với nhiều ngôn ngữ lập trình như:</p>
+<ul>
+<li><strong>Java</strong>, <strong>JavaScript</strong>, <strong>C#</strong>, <strong>C++</strong>, <strong>SQL</strong>, <strong>HTML</strong>, <strong>CSS</strong>, <strong>PHP</strong></li>
+<li>Bên cạnh đó, tôi luôn nỗ lực để phát triển bản thân và chia sẻ kiến thức thông qua các bài viết trên blog này.</li>
+</ul>
+<h1 id="dự-án-thực-hiện"><strong>DỰ ÁN THỰC HIỆN</strong></h1>
+<h2 id="web-thương-mại-điện-tử"><strong>Web Thương mại điện tử</strong></h2>
+<ul>
+<li><a href="https://github.com/Dievis/JavaSpringBoots">https://github.com/Dievis/JavaSpringBoots</a></li>
+<li><strong>Công nghệ sử dụng: Java Spring boot, MySQL</strong></li>
+</ul>
+<p><strong>Mô tả:</strong></p>
+<ul>
+<li>CRUD</li>
+<li>Đăng nhập, đăng ký tài khoản</li>
+<li>Giỏ hàng</li>
+<li>Thanh toán ngân hàng</li>
+<li>Tìm kiếm sản phẩm</li>
+</ul>
+<h2 id="game-3d-anomaly"><strong>Game 3D Anomaly</strong></h2>
+<ul>
+<li><a href="https://github.com/NHD2507/DACN">https://github.com/NHD2507/DACN</a></li>
+<li><strong>Công nghệ sử dụng: Unity</strong></li>
+</ul>
+<p><strong>Mô tả:</strong></p>
+<ul>
+<li>UI</li>
+<li>Chơi mới, lưu tiến độ, tùy chỉnh</li>
+<li>Advanced character movement</li>
+<li>Tương tác vật thể</li>
+<li>Biến đổi vật thể theo thời gian</li>
+<li><strong>Có thể chạy trên môi trường mobile và window</strong></li>
+</ul>
 
             </div>
         </article>
@@ -187,7 +225,7 @@ stroke-linejoin="round" class="feather feather-home">
 </a>
 </div>
     <small class="footer_copyright">
-        © 2024 Trần Phát Đạt.
+        © 2025 Trần Phát Đạt.
         
     </small>
 </footer><a href="#" title="" id="totop">
